--- a/prjApirest/src/main/webapp/WEB-INF/web.xml
+++ b/prjApirest/src/main/webapp/WEB-INF/web.xml
@@ -9,12 +9,9 @@
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
 			<param-name>jersey.config.server.provider.packages</param-name>
-			<param-value>com.franca.prjApirest</param-value>
+			<param-value>com.franca.resource</param-value>
 		</init-param>
-		<init-param>
-			<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
-			<param-value>true</param-value>
-		</init-param>
+		
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
