--- a/prjApirest/pom.xml
+++ b/prjApirest/pom.xml
@@ -70,6 +70,12 @@
 			<version>5.1.34</version>
 			<scope>compile</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.0</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<jersey.version>2.21</jersey.version>
