--- a/prjApirest/src/main/webapp/WEB-INF/web.xml
+++ b/prjApirest/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
 			<param-name>jersey.config.server.provider.packages</param-name>
-			<param-value>com.franca.resource</param-value>
+			<param-value>com.franca.resources</param-value>
 		</init-param>
 		
 		<load-on-startup>1</load-on-startup>
