--- a/prjApirest/pom.xml
+++ b/prjApirest/pom.xml
@@ -70,7 +70,11 @@
 			<version>5.1.34</version>
 			<scope>compile</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.7.0</version>
+		</dependency>
 		<dependency>
 			<groupId>com.sun.mail</groupId>
 			<artifactId>javax.mail</artifactId>
