--- a/apirest/pom.xml
+++ b/apirest/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.franca</groupId>
-	<artifactId>prjApirest</artifactId>
+	<artifactId>apirest</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>prjApirest</name>
