--- a/prjApirest/pom.xml
+++ b/prjApirest/pom.xml
@@ -80,6 +80,14 @@
 			<artifactId>javax.mail</artifactId>
 			<version>1.6.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 	<properties>
 		<jersey.version>2.21</jersey.version>
